[gd_scene load_steps=37 format=3 uid="uid://cq5uhdmef07sh"]

[ext_resource type="Script" path="res://Scenes and Scripts/Menu/menu.gd" id="1_3la32"]
[ext_resource type="AudioStream" uid="uid://ccpr27jn8u2hn" path="res://Assets/SFX and Music/Menu_music.wav" id="2_tltqq"]
[ext_resource type="Texture2D" uid="uid://c1672h47df4i4" path="res://Assets/effect.png" id="2_vjod2"]
[ext_resource type="AudioStream" uid="uid://dft0t7pk4g571" path="res://Assets/SFX and Music/door_sound.wav" id="3_14nts"]
[ext_resource type="Texture2D" uid="uid://cusj1lxepv5oa" path="res://Assets/Buttons/start.png" id="3_81qh5"]
[ext_resource type="AudioStream" uid="uid://cwp5iohabo2n2" path="res://Assets/SFX and Music/water_on_fire.ogg" id="3_snnxy"]
[ext_resource type="Texture2D" uid="uid://bbx4yhql14vg8" path="res://Assets/Buttons/start_click.png" id="4_ad1ix"]
[ext_resource type="Texture2D" uid="uid://2j5jskspgo4x" path="res://Assets/Buttons/start_clicked.png" id="5_i0naw"]
[ext_resource type="AudioStream" uid="uid://cv8msmdt50ubn" path="res://Assets/SFX and Music/fire_burst.wav" id="5_tfq4i"]
[ext_resource type="Texture2D" uid="uid://86825mn8xj5a" path="res://Assets/Buttons/loadgame.png" id="6_2h74y"]
[ext_resource type="Texture2D" uid="uid://dq26h80e25rg2" path="res://Assets/Buttons/loadgame_click.png" id="7_uj1ka"]
[ext_resource type="Texture2D" uid="uid://btwa7wak5ik34" path="res://Assets/Buttons/loadgame_clicked.png" id="8_5k6x3"]
[ext_resource type="Texture2D" uid="uid://cj3af82t3yv86" path="res://Assets/Buttons/quitgame.png" id="9_kb6aw"]
[ext_resource type="Texture2D" uid="uid://cuojxl2703bf" path="res://Assets/Buttons/quitgame_click.png" id="10_u4rul"]
[ext_resource type="Texture2D" uid="uid://hor7lkqtgjyn" path="res://Assets/Icons/icon.png" id="15_siibl"]
[ext_resource type="Texture2D" uid="uid://bcayvhu1mfb66" path="res://Assets/WJBanners/68-Forge.png" id="16_5vqbv"]
[ext_resource type="Texture2D" uid="uid://cpyk8sqpvmybk" path="res://Assets/WJBanners/perma-death.png" id="17_c4k1w"]
[ext_resource type="Texture2D" uid="uid://djbuj2i8y5xvw" path="res://Assets/WJBanners/sad-trombone.png" id="18_mmnas"]
[ext_resource type="Texture2D" uid="uid://cjd5h6oavtw3w" path="res://Assets/GWJ-Full-Logo-tag-4k.png" id="19_i35oc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ulh5y"]
texture = ExtResource("3_81qh5")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r3nyf"]
texture = ExtResource("4_ad1ix")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lllm5"]
texture = ExtResource("5_i0naw")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j3fhd"]
texture = ExtResource("5_i0naw")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6br30"]
texture = ExtResource("6_2h74y")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0wlbc"]
texture = ExtResource("7_uj1ka")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kr6u8"]
texture = ExtResource("8_5k6x3")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rvjn5"]
texture = ExtResource("8_5k6x3")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ixj7v"]
texture = ExtResource("9_kb6aw")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_adqdu"]
texture = ExtResource("10_u4rul")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fyp2a"]
texture = ExtResource("10_u4rul")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l1im1"]
texture = ExtResource("10_u4rul")

[sub_resource type="Gradient" id="Gradient_hit41"]
offsets = PackedFloat32Array(0, 0.47541, 0.97541)
colors = PackedColorArray(0.290196, 0, 0, 0.486275, 1, 0.407843, 0.0156863, 1, 1, 1, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_agw06"]
gradient = SubResource("Gradient_hit41")

[sub_resource type="Curve" id="Curve_bjfdq"]
_data = [Vector2(0, 0), 0.0, 5.62379, 0, 0, Vector2(1, 1), -0.908275, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_6s4ht"]
curve = SubResource("Curve_bjfdq")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_lwiw5"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(250, 1, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
direction = Vector3(0, -1, 0)
initial_velocity_min = 100.0
initial_velocity_max = 1000.0
orbit_velocity_min = -0.1
orbit_velocity_max = 0.1
radial_velocity_min = -500.0
radial_velocity_max = 500.0
color = Color(1, 0.603922, 0, 1)
color_ramp = SubResource("GradientTexture1D_agw06")
emission_curve = SubResource("CurveTexture_6s4ht")

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_3la32")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1041.0
offset_bottom = 1041.0
color = Color(0, 0, 0, 1)

[node name="BackgroundMenuMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_tltqq")
volume_db = -10.0
autoplay = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = -192.0
offset_right = 316.0
offset_bottom = 358.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="Start" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxTexture_ulh5y")
theme_override_styles/hover = SubResource("StyleBoxTexture_r3nyf")
theme_override_styles/pressed = SubResource("StyleBoxTexture_lllm5")
theme_override_styles/disabled = SubResource("StyleBoxTexture_j3fhd")
text = "
"

[node name="Load" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxTexture_6br30")
theme_override_styles/hover = SubResource("StyleBoxTexture_0wlbc")
theme_override_styles/pressed = SubResource("StyleBoxTexture_kr6u8")
theme_override_styles/disabled = SubResource("StyleBoxTexture_rvjn5")

[node name="Quit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxTexture_ixj7v")
theme_override_styles/hover = SubResource("StyleBoxTexture_adqdu")
theme_override_styles/pressed = SubResource("StyleBoxTexture_fyp2a")
theme_override_styles/disabled = SubResource("StyleBoxTexture_l1im1")

[node name="Start_fire" type="GPUParticles2D" parent="."]
position = Vector2(501, 281)
emitting = false
amount = 5000
process_material = SubResource("ParticleProcessMaterial_lwiw5")
texture = ExtResource("2_vjod2")
one_shot = true

[node name="QuitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_snnxy")

[node name="StartSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_tfq4i")

[node name="LoadSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_14nts")

[node name="BackgroundAnimation" type="AnimationPlayer" parent="."]

[node name="Button" type="Button" parent="."]
offset_left = 73.0
offset_top = 75.0
offset_right = 131.0
offset_bottom = 133.0
icon = ExtResource("15_siibl")
flat = true

[node name="Label" type="Label" parent="Button"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.871724
anchor_right = 0.871724
offset_left = -70.56
offset_top = 43.68
offset_right = 109.44
offset_bottom = 66.68
text = "Shyr's Games"
metadata/_edit_use_anchors_ = true

[node name="68-forge" type="Sprite2D" parent="."]
position = Vector2(508, 43)
scale = Vector2(0.0842532, 0.0842533)
texture = ExtResource("16_5vqbv")

[node name="Perma-death" type="Sprite2D" parent="."]
position = Vector2(103.047, 662.065)
rotation = -0.485706
scale = Vector2(0.15, 0.15)
texture = ExtResource("17_c4k1w")

[node name="Sad-trombone" type="Sprite2D" parent="."]
position = Vector2(194.568, 675.066)
rotation = 0.407429
scale = Vector2(0.15, 0.15)
texture = ExtResource("18_mmnas")

[node name="Gwj-full-logo-tag-4k" type="Sprite2D" parent="."]
position = Vector2(899, 208)
scale = Vector2(0.131444, 0.131444)
texture = ExtResource("19_i35oc")

[node name="Label2" type="Label" parent="Gwj-full-logo-tag-4k"]
offset_left = -623.837
offset_top = -973.795
offset_right = -443.837
offset_bottom = -950.795
text = "Made for:"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="finished" from="Start_fire" to="." method="_on_start_fire_finished"]
[connection signal="finished" from="QuitSound" to="." method="_on_quit_sound_finished"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
